# gtk-template-dispose

./: meson.build  org.gnome.gtk_test.json
data/: meson.build  org.gnome.gtk_test.appdata.xml.in  org.gnome.gtk_test.desktop.in  org.gnome.gtk_test.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: gtk-test-application.c  gtk-test-application.h  gtk-test-row.c  gtk-test-row.h  gtk-test-row.ui  gtk-test-window.c  gtk-test-window.h  gtk-test-window.ui  gtk-test.gresource.xml  main.c  meson.build
